conda/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: conda
spec:
  strategy:
    type: Recreate
  selector:
    matchLabels:
      name: conda
  template:
    metadata:
      labels:
        name: conda
    spec:
      containers:
        - name: conda
          image: mambaorg/quetz:v0.10.4
          args:
            - quetz
            - run
            - /data
            - --copy-conf
            - /etc/quetz/config.toml
            - --host
            - 0.0.0.0
          ports:
            - name: http
              containerPort: 8000
              protocol: TCP
          resources:
            limits:
              cpu: 4
              memory: 8Gi
          volumeMounts:
            - name: data
              mountPath: /data
            - name: config
              mountPath: /etc/quetz
              readOnly: true
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: conda-data
        - name: config
          secret:
            secretName: conda-config
