conda/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: conda
spec:
  type: ClusterIP
  selector:
    name: conda
  ports:
    - port: 80
      name: http
      targetPort: http
      protocol: TCP
