conda/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: conda
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - conda.example.com
  rules:
    - host: conda.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: conda
                port:
                  number: 80
